# cs

./: .gitignore  CMakeLists.txt  README  example_config
configs/: server_config
docker/: Dockerfile  cloudbuild.yaml  coverage.Dockerfile
include/: caption_file_parser.h  config_parser.h  crud_request_handler.h  crud_request_handler_factory.h  echo_request_handler.h  error_request_handler.h  error_request_handler_factory.h  file_system_base.h  file_system_fake.h  file_system_real.h  logger.h  request_handler.h  server.h  session.h  static_request_handler.h
include/factories/: caption_this_request_handler_factory.h  echo_request_handler_factory.h  health_request_handler_factory.h  request_handler_factory.h  sleep_request_handler_factory.h  static_request_handler_factory.h
include/file_system/: file_system_base.h  file_system_fake.h  file_system_real.h
include/request_handlers/: caption_this_request_handler.h  crud_request_handler.h  echo_request_handler.h  health_request_handler.h  request_handler.h  sleep_request_handler.h
src/: caption_file_parser.cc  config_parser.cc  crud_request_handler.cc  echo_request_handler.cc  error_request_handler.cc  error_request_handler_factory.cc  file_system_base.cc  file_system_fake.cc  file_system_real.cc  logger.cc  request_handler.cc  server.cc  server.h  server_main.cc  session.cc  session.h  static_request_handler.cc
src/factories/: caption_this_request_handler_factory.cc  crud_request_handler_factory.cc  echo_request_handler_factory.cc  health_request_handler_factory.cc  sleep_request_handler_factory.cc  static_request_handler_factory.cc
src/file_system/: file_system_base.cc  file_system_fake.cc  file_system_real.cc
src/request_handlers/: caption_this_request_handler.cc  crud_request_handler.cc  echo_request_handler.cc  error_request_handler.cc  health_request_handler.cc  request_handler.cc  sleep_request_handler.cc  static_request_handler.cc
static/: 400_error.html  404_error.html  gallery_page.html  pushin-p-landing.html  pushing-p-landing.html  specific_submission_page.html  submit_page.html
tests/: caption_file_parser_test.cc  config_parser_test.cc  file_system_fake_test.cc  file_system_test.cc  malformed_multi_contexts_config  proxy_config  request_handler_factory_test.cc  request_handler_test.cc  server_test.cc  session_test.cc
tests/integration_test/: ct_retrieve_expected  test.sh  test1_expected  test2_expected  test6_expected
tests/test_configs/: CRUD_config  caption_this_config  endpoints_correct_config  endpoints_echo_few_arguments_config  endpoints_redefined_path_config  endpoints_static_few_arguments_config  example_config  health_config  malformed_extra_bracket_prior_config  malformed_extra_semicolon_config  malformed_random_brackets_config  port_correct_config  port_invalid_config
